civo/viewer/viewer-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  graph-viewer-apps
  namespace: dependencies
  labels:
    app:  dependencies-graph-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  dependencies-graph-viewer
  template:
    metadata:
      labels:
        app:  dependencies-graph-viewer
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name:  dependencies-graph-viewer
        image: xclemence/dependencies-graph-viewer:1.2.0
        ports:
        - containerPort: 4200
          protocol: TCP
